Fixed Styles
Fixed issues with styles not showing up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,10 @@
-/* line 13, ../compass/sass/style.scss */
-img {
+/* line 7, ../compass/sass/style.scss */
+body .container.B .row.B img {
   position: relative;
   width: 100%;
 }
-
-/* line 18, ../compass/sass/style.scss */
-.tweet {
+/* line 11, ../compass/sass/style.scss */
+body .container.B .row.B .tweet {
   position: absolute;
   top: 0;
   left: 0;
